# alpscore-transform

./: .gitignore  CMakeLists.txt  README.md
cmake/: EnableGtests.cmake  FindNumPy.cmake
include/alps/transform/: common.hpp  fftw.hpp  fourier.hpp  model.hpp  nonuniform.hpp
src/: fftw.cpp  fourier.cpp  model.cpp  nonuniform.cpp
swig/: transform.i
test/: consistency.cpp  gtest_util.hpp
